[ci skip] Phrasing 5037e9325c98e5595666c5bef727f89e8737f977

--- a/_sources/content/notebooks/single_horizon_prediction.ipynb
+++ b/_sources/content/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b97dfd3e",
+   "id": "93f316b6",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b07e63",
+   "id": "9c586a93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605aec41",
+   "id": "dd3689a1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b79db61",
+   "id": "abe69072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b6763cc",
+   "id": "019f6dd9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a03a68f",
+   "id": "1eda15b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf86396",
+   "id": "b1846a45",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acd60c3",
+   "id": "38e3bdfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8bf05e3",
+   "id": "3e6af4f3",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857bf22d",
+   "id": "2967a9c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c3e5abb",
+   "id": "c08c4c73",
    "metadata": {},
    "source": [
     "\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b25e0e",
+   "id": "5194a806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce95010d",
+   "id": "829927ef",
    "metadata": {},
    "source": [
     "\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd002dfe",
+   "id": "19fbaa2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf0ba01b",
+   "id": "41720ea4",
    "metadata": {},
    "source": [
     "\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54659edc",
+   "id": "20a281b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0353f38c",
+   "id": "883004fd",
    "metadata": {},
    "source": [
     "\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e536ddd",
+   "id": "596913a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35f2384",
+   "id": "5dc1e58e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d260d36",
+   "id": "6fb1c0b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a7b090",
+   "id": "cf8d6c93",
    "metadata": {},
    "source": [
     "\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4182dfd",
+   "id": "4d5f5789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a62c98f",
+   "id": "bce0ebf4",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e96b705",
+   "id": "ee36edac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f94072",
+   "id": "3791fa1b",
    "metadata": {},
    "source": [
     "\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f06b9b",
+   "id": "0cb83c40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1d57bac",
+   "id": "3101613a",
    "metadata": {},
    "source": [
     "\n",
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d581cb",
+   "id": "cd2e26b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dffd92d",
+   "id": "162eef7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b5ec89",
+   "id": "b769c759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78672063",
+   "id": "78996102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bba3927",
+   "id": "b979b584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88e782b",
+   "id": "a526223c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120c75b0",
+   "id": "b12591df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9843cf30",
+   "id": "64930676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d69f1a",
+   "id": "cf8c4e22",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be993610",
+   "id": "19b3ad0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e156ea56",
+   "id": "499e0f44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "593a7f7c",
+   "id": "4fe1dbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,21 +726,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4580ff",
+   "id": "fa19fc4e",
    "metadata": {},
    "source": [
     "\n",
-    "Now that you defined the predictive model, let's make a similar analysis than earlier.\n",
-    "Let's evaluate the performance of the model using cross-validation. Use the\n",
-    "time-based cross-validation splitter `ts_cv_5` defined earlier. Make sure to compute\n",
-    "the R2 score and the mean absolute percentage error. Return the training scores as\n",
-    "well as the fitted pipeline such that we can make additional analysis."
+    "Now that you defined the predictive model, let's evaluate the performance of\n",
+    "the model using cross-validation. Use the time-based cross-validation\n",
+    "splitter `ts_cv_5` defined earlier. Make sure to compute the R2 score and the\n",
+    "mean absolute percentage error. Return the training scores as well as the\n",
+    "fitted pipeline such that we can make additional analysis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0138c77",
+   "id": "b2a02849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41e7511",
+   "id": "f44f0e77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c5d460",
+   "id": "4b886c76",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ec7b1f",
+   "id": "154e21e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d5c9b1",
+   "id": "59fcc92f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3310aa0f",
+   "id": "58ca21cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d527ad74",
+   "id": "83cf26b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e70679",
+   "id": "f17e3962",
    "metadata": {},
    "source": [
     "\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d4087f6",
+   "id": "cf18cf06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "217822fb",
+   "id": "e48d0bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "843738e2",
+   "id": "d4559134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa677c78",
+   "id": "c123a6d0",
    "metadata": {},
    "source": [
     "\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db56fa0c",
+   "id": "4ffc6ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "235c8b1a",
+   "id": "bb308251",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a906f7b6",
+   "id": "a45f8fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7e8c67",
+   "id": "3b1865ee",
    "metadata": {},
    "source": [
     "\n",
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be0f2c3",
+   "id": "9818b312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1499006f",
+   "id": "b38d7204",
    "metadata": {},
    "outputs": [],
    "source": [
