--- a/jupyterlite/files/notebooks/single_horizon_prediction.ipynb
+++ b/jupyterlite/files/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "094fc924",
+   "id": "b4aff34d",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54b86bfa",
+   "id": "904709b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02512841",
+   "id": "8a589167",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "276a0595",
+   "id": "0b0c5bea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2643c5c7",
+   "id": "bc6fe78f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1087bcd4",
+   "id": "8a019bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f64042d3",
+   "id": "9bd391d7",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c047ef0",
+   "id": "fbbfa004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c947d102",
+   "id": "83bdda00",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51c58b9",
+   "id": "26f6160b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10bac36d",
+   "id": "970f8b3a",
    "metadata": {},
    "source": [
     "\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb1955d8",
+   "id": "e7288c02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6612ec77",
+   "id": "95dc2dae",
    "metadata": {},
    "source": [
     "\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48d0dc2",
+   "id": "ed5a77a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b5308a",
+   "id": "0a78c659",
    "metadata": {},
    "source": [
     "\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7799c01a",
+   "id": "286d39bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce5d2c2",
+   "id": "35707780",
    "metadata": {},
    "source": [
     "\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b868d3f",
+   "id": "35d79746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc9e783",
+   "id": "b9b9dee0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a6076e",
+   "id": "9ef9028c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b636409",
+   "id": "a9cda106",
    "metadata": {},
    "source": [
     "\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98e4752",
+   "id": "539ede1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca565f8",
+   "id": "3994774b",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3f1f4c7",
+   "id": "470dfe3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb0c5c71",
+   "id": "ec7207ef",
    "metadata": {},
    "source": [
     "\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f31c13",
+   "id": "bb4e161f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ba9a56a",
+   "id": "b53b6f0b",
    "metadata": {},
    "source": [
     "\n",
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94c509b6",
+   "id": "4a00f628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bfae3c5",
+   "id": "9c027068",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550bb4f8",
+   "id": "1c03f025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4e6bbf",
+   "id": "53862aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda8c98e",
+   "id": "085e0d4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebae0d81",
+   "id": "8b6777fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5509e2ff",
+   "id": "5039cdcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37465a5e",
+   "id": "683f3da0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bc704b",
+   "id": "cefe0146",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4c53a35",
+   "id": "20dcb90d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c650252",
+   "id": "1893185d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b5c7bb1",
+   "id": "f48a197d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,21 +726,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c2f83b",
+   "id": "bd9ae28f",
    "metadata": {},
    "source": [
     "\n",
-    "Now that you defined the predictive model, let's make a similar analysis than earlier.\n",
-    "Let's evaluate the performance of the model using cross-validation. Use the\n",
-    "time-based cross-validation splitter `ts_cv_5` defined earlier. Make sure to compute\n",
-    "the R2 score and the mean absolute percentage error. Return the training scores as\n",
-    "well as the fitted pipeline such that we can make additional analysis."
+    "Now that you defined the predictive model, let's evaluate the performance of\n",
+    "the model using cross-validation. Use the time-based cross-validation\n",
+    "splitter `ts_cv_5` defined earlier. Make sure to compute the R2 score and the\n",
+    "mean absolute percentage error. Return the training scores as well as the\n",
+    "fitted pipeline such that we can make additional analysis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8020d3cf",
+   "id": "796025b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01915772",
+   "id": "c0d20410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "809eff95",
+   "id": "fa0a86d5",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b90c84dd",
+   "id": "74675d6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04969d65",
+   "id": "9a6b2ebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2df252b",
+   "id": "40ec7d17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97ae81f9",
+   "id": "9e50c641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9228b6",
+   "id": "dfd55293",
    "metadata": {},
    "source": [
     "\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f9fe5e4",
+   "id": "b60731bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5da68d3a",
+   "id": "9697ca24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793a26eb",
+   "id": "03f702d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0757568",
+   "id": "0770678c",
    "metadata": {},
    "source": [
     "\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "441df964",
+   "id": "4d5088c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "983ef013",
+   "id": "05ff569f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefc1965",
+   "id": "f3301820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7bb4e82",
+   "id": "c8d22053",
    "metadata": {},
    "source": [
     "\n",
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c3e56da",
+   "id": "f602d0d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66d532b8",
+   "id": "4e523b38",
    "metadata": {},
    "outputs": [],
    "source": [
